# docling-workshop-pycones-2025

./: .editorconfig  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: deploy-docs.yml
docs/: README.md
docs/css/: custom.css
docs/lab-1/: README.md
docs/lab-2/: README.md
docs/lab-3/: README.md
docs/pre-work/: README.md
lab-1/: index.html
lab-2/: index.html
lab-3/: index.html
notebooks/: Lab1_Docling_convert.ipynb  Lab2_Chunking.ipynb  Lab2_Hybrid_Chunking.ipynb  Lab3_RAG.ipynb
pre-work/: index.html
search/: search_index.json
