[project]
name = "202510-pycones-docling-workshop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "docling>=2.54.0",
    "docling-mcp>=1.3.2",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "langfuse==2.59.7",
    "litellm[proxy]>=1.74.9",
    "llama-stack-client>=0.2.23",
    "matplotlib>=3.10.6",
    "mlx-vlm>=0.3.3",
    "openai-agents==0.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-material[imaging]>=9.6.21",
    # "litellm[proxy]>=1.77.5",
    "replicate>=1.0.7",
]
