[project]
name = "202510-pycones-docling-workshop"
version = "0.1.0"
description = "PyConES 2025 - Workshop sobre Docling: conversión de documentos, chunking y RAG multimodal"
authors = [
    {name = "Simón Sánchez Viloria", email = "simon@example.com"},
    {name = "Andres Ruiz Calvo", email = "andres@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["docling", "rag", "chunking", "document-conversion", "ai", "workshop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://simonsanvil.github.io/docling-workshop-pycones-2025/"
Documentation = "https://simonsanvil.github.io/docling-workshop-pycones-2025/"
Repository = "https://github.com/simonsanvil/docling-workshop-pycones-2025"
"Bug Tracker" = "https://github.com/simonsanvil/docling-workshop-pycones-2025/issues"

dependencies = [
    "aiohttp>=3.12.15",
    "docling>=2.54.0",
    # "docling-mcp>=1.3.2",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    # "langfuse==2.59.7",
    # "litellm[proxy]>=1.74.9",
    # "llama-stack-client>=0.2.23",
    "matplotlib>=3.10.6",
    # "mlx-vlm>=0.3.3",
    # "openai-agents==0.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "replicate>=1.0.7",
]

[dependency-groups]
dev = [
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-material[imaging]>=9.6.21",
    "mkdocs-open-in-new-tab>=1.0.8",
    # "litellm[proxy]>=1.77.5",
]